[gd_scene load_steps=7 format=3 uid="uid://bcrem2ugvl83t"]

[ext_resource type="Script" path="res://components/Menu/MainMenu/MainMenu.gd" id="1"]
[ext_resource type="FontFile" uid="uid://c4wkpvq38gdoq" path="res://assets/fonts/Arcade.ttf" id="2"]
[ext_resource type="PackedScene" uid="uid://vy8ykdp0wu7f" path="res://components/Menu/Label/Label.tscn" id="3"]
[ext_resource type="FontFile" uid="uid://doesrguwx81i0" path="res://assets/fonts/8bitOperatorPlus-Bold.ttf" id="4"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("2"), ExtResource("2")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/78/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/120/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/140/0 = Vector2(0, 0)
cache/0/24/0/ascent = 0.0
cache/0/24/0/descent = 0.0
cache/0/24/0/underline_position = 0.0
cache/0/24/0/underline_thickness = 0.0
cache/0/24/0/scale = 1.0
cache/0/24/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/78/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/120/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/140/0 = Vector2(0, 0)
cache/0/1/0/ascent = 0.0
cache/0/1/0/descent = 0.0
cache/0/1/0/underline_position = 0.0
cache/0/1/0/underline_thickness = 0.0
cache/0/1/0/scale = 1.0
cache/0/1/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/78/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/120/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/140/0 = Vector2(0, 0)
cache/0/78/0/ascent = 0.0
cache/0/78/0/descent = 0.0
cache/0/78/0/underline_position = 0.0
cache/0/78/0/underline_thickness = 0.0
cache/0/78/0/scale = 1.0
cache/0/78/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/78/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/78/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/78/0/kerning_overrides/78/0 = Vector2(0, 0)
cache/0/78/0/kerning_overrides/120/0 = Vector2(0, 0)
cache/0/78/0/kerning_overrides/140/0 = Vector2(0, 0)
cache/0/120/0/ascent = 0.0
cache/0/120/0/descent = 0.0
cache/0/120/0/underline_position = 0.0
cache/0/120/0/underline_thickness = 0.0
cache/0/120/0/scale = 1.0
cache/0/120/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/120/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/120/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/120/0/kerning_overrides/78/0 = Vector2(0, 0)
cache/0/120/0/kerning_overrides/120/0 = Vector2(0, 0)
cache/0/120/0/kerning_overrides/140/0 = Vector2(0, 0)
cache/0/140/0/ascent = 0.0
cache/0/140/0/descent = 0.0
cache/0/140/0/underline_position = 0.0
cache/0/140/0/underline_thickness = 0.0
cache/0/140/0/scale = 1.0
cache/0/140/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/140/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/140/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/140/0/kerning_overrides/78/0 = Vector2(0, 0)
cache/0/140/0/kerning_overrides/120/0 = Vector2(0, 0)
cache/0/140/0/kerning_overrides/140/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("4"), ExtResource("4")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/24/0/ascent = 0.0
cache/0/24/0/descent = 0.0
cache/0/24/0/underline_position = 0.0
cache/0/24/0/underline_thickness = 0.0
cache/0/24/0/scale = 1.0
cache/0/24/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/24/0 = Vector2(0, 0)

[node name="MainMenu" type="VBoxContainer"]
offset_left = 416.0
offset_top = 194.0
offset_right = 1504.0
offset_bottom = 885.0
mouse_filter = 2
alignment = 1
script = ExtResource("1")

[node name="Title" type="Label" parent="."]
layout_mode = 2
theme_override_fonts/font = SubResource("1")
theme_override_font_sizes/font_size = 140
text = "The invasion
"
horizontal_alignment = 1

[node name="StartGame" parent="." instance=ExtResource("3")]
layout_mode = 2
focus_neighbor_top = NodePath("../Options")
theme_override_fonts/font = SubResource("2")
text = "Start next level"
horizontal_alignment = 1
initial_focus = true

[node name="UpgradeWeapon" parent="." instance=ExtResource("3")]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "Upgrade weapon"
horizontal_alignment = 1

[node name="UpgradeShip" parent="." instance=ExtResource("3")]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "Upgrade ship"
horizontal_alignment = 1

[node name="Options" parent="." instance=ExtResource("3")]
layout_mode = 2
focus_neighbor_bottom = NodePath("../StartGame")
theme_override_fonts/font = SubResource("2")
text = "Options"
horizontal_alignment = 1

[connection signal="selected" from="StartGame" to="." method="_on_StartGame_selected"]
[connection signal="selected" from="UpgradeWeapon" to="." method="_on_UpgradeWeapon_selected"]
[connection signal="selected" from="UpgradeShip" to="." method="_on_UpgradeShip_selected"]
[connection signal="selected" from="Options" to="." method="_on_Options_selected"]
